...
  const onSubmit = (data: any) => {
    console.log(data)
    setStep(step + 1)
  }

  return (
    <SafeAreaView testID='profile-screen'>
      <NativeBaseProvider>
        <ScrollView>
          <Box
            bg='primary.50'
            py='8'
            px='3'
...
                    <Checkbox value='male' colorScheme='orange'>
                      <Text testID='maleID' mx={2}>
                        Herr
                      </Text>
                    </Checkbox>
                    <Checkbox value='female' colorScheme='dark'>
                      <Text testID='femaleID' mx={2}>
                        Frau
                      </Text>
                    </Checkbox>
                  </Checkbox.Group>
                )}
              />
...
            <FormControl isRequired isInvalid={'firstName' in errors}>
              <FormControl.Label>Vorname</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='firstNameID'
                    onBlur={onBlur}
                    placeholder='Müller'
                    onChangeText={(val) => onChange(val)}
                    value={value}
                  />
                )}
...
            <FormControl isRequired isInvalid={'lastName' in errors}>
              <FormControl.Label>Nachname</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='lastNameID'
                    onBlur={onBlur}
                    placeholder='Müller'
                    onChangeText={(val) => onChange(val)}
                    value={value}
                  />
                )}
...
            />
            <FormControl.Label>Heimatort</FormControl.Label>
            <Controller
              control={control}
              render={({ field: { onChange, value, onBlur } }) => (
                <Input
                  testID='hometownID'
                  onBlur={onBlur}
                  placeholder='Zurich'
                  onChangeText={(val) => onChange(val)}
                  value={value}
                />
              )}
...
            <FormControl isRequired isInvalid={'birthDate' in errors}>
              <FormControl.Label>Geburtsdatum</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='birthDateID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    value={value}
                  />
                )}
                name='birthDate'
...
            <FormControl isRequired isInvalid={'street' in errors}>
              <FormControl.Label>Strasse</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='streetID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    value={value}
                  />
                )}
                name='street'
...
            <FormControl isRequired isInvalid={'housenumber' in errors}>
              <FormControl.Label>Hausnummer</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='housenumberID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    value={value}
                  />
                )}
                name='housenumber'
...
            <FormControl isRequired isInvalid={'zip' in errors}>
              <FormControl.Label>PLZ</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='zipID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    value={value}
                  />
                )}
                name='zip'
...
            <FormControl isRequired isInvalid={'city' in errors}>
              <FormControl.Label>Ort</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='cityID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    value={value}
                  />
                )}
                name='city'
...
              <FormControl.ErrorMessage>
                {errors.city?.message}
              </FormControl.ErrorMessage>
            </FormControl>

            <Button
              testID='profileButtonID'
              margin={6}
              onPress={handleSubmit(onSubmit)}
              colorScheme='pink'
            >
              Next
            </Button>
...
