...
  ScrollView,
  Text,
  WarningIcon,
} from 'native-base'
import { yupResolver } from '@hookform/resolvers/yup'
import { Step } from '../../components/types/step'
import { FundsSchema } from '../../helpers/validations/funds'
import { SafeAreaView } from 'react-native'
import { createServer } from 'miragejs'

declare const window: any

export const Funds: React.FC<Step> = ({ step, setStep }) => {
...
            <FormControl isInvalid={'bankDeposits' in errors}>
              <FormControl.Label>Bankguthaben</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='bankDepositsID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={setBankDeposits(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'secondPillar' in errors}>
              <FormControl.Label>Vorbezug 2. Säule</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='secondPillarID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetSecondPillar(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'thirdPillar' in errors}>
              <FormControl.Label>Vorbezug 3. Säule</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='thirdPillarID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetThirdPillar(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'depositValues' in errors}>
              <FormControl.Label>Depotwerte</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='depositValuesID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={setDepositValues(value)}
                    value={value}
                  />
...
                Darlehen mit Rangrücktritt/Abtretung
              </FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='loanWithSubordinationID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetLoanWithSubordination(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'donation' in errors}>
              <FormControl.Label>Schenkung/Erbvorzug</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='donationID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetDonation(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'saleProceeds' in errors}>
              <FormControl.Label>Verkaufserlös</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='saleProceedsID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetSaleProceeds(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'ownWork' in errors}>
              <FormControl.Label>Eigene Arbeitsleistungen</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='ownWorkID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetOwnWork(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'others' in errors}>
              <FormControl.Label>Diverses</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='othersID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetOthers(value)}
                    value={value}
                  />
...
              <FormControl.ErrorMessage>
                {errors.others?.message}
              </FormControl.ErrorMessage>
            </FormControl>

            <Button
              testID='fundsButtonID'
              margin={6}
              onPress={handleSubmit(onSubmit)}
              colorScheme='pink'
            >
              Next
            </Button>
...
