...
            maxWidth='100%'
            margin={6}
          >
            <HStack justifyContent='space-between'>
              <Box justifyContent='space-between'>
                <Heading size='md' alignContent='center'>
                  Zusatzdeckung
                </Heading>
                <Text>
                  {sum > calculatedPrice() ? (
                    <React.Fragment>
                      <CheckIcon size='5' mt='0.5' color='emerald.500' />{' '}
                      <Text color='emerald.500' fontSize='md'>
...
            <FormControl isInvalid={'secondPillar' in errors}>
              <FormControl.Label>2. Säule</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='secondPillarIDcol'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetSecondPillar(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'thirdPillar' in errors}>
              <FormControl.Label>3. Säule</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='thirdPillarIDcol'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetThirdPillar(value)}
                    value={value}
                  />
...
            <FormControl isInvalid={'freeLifeInsurance' in errors}>
              <FormControl.Label>Freie Lebensversicherung</FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='freeLifeInsuranceID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetFreeLifeInsurance(value)}
                    value={value}
                  />
...
                Gebundene Lebensversicherung
              </FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='tiedLifeInsuranceID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetTiedLifeInsurance(value)}
                    value={value}
                  />
...
                Freie Fonds-Lebensversicherung
              </FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='fundLifeInsuranceID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetFundLifeInsurance(value)}
                    value={value}
                  />
...
                Gebundene Fonds- Lebensversicherung
              </FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='tiedFundLifeInsuranceID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetTiedFundLifeInsurance(value)}
                    value={value}
                  />
...
                Freie Todesfall-Risikopolice
              </FormControl.Label>
              <Controller
                control={control}
                render={({ field: { onChange, value, onBlur } }) => (
                  <Input
                    testID='freeDeathBenefitPolicyID'
                    onBlur={onBlur}
                    onChangeText={(val) => onChange(val)}
                    //@ts-ignore
                    onChange={SetFreeDeathBenefitPolicy(value)}
                    value={value}
                  />
...
              <FormControl.ErrorMessage>
                {errors.freeDeathBenefitPolicy?.message}
              </FormControl.ErrorMessage>
            </FormControl>

            <Button
              testID='collateralsButtonID'
              margin={6}
              onPress={handleSubmit(onSubmit)}
              colorScheme='pink'
            >
              Next
            </Button>
...
